# family-ledger

./: .env.example  .gitignore  GEMINI.md  LICENSE  Makefile  README.md  accounts.example.bean  category_map.py  config.example.py  config_utils.py  main.example.bean  main.py  mise.toml  pyproject.toml  user_rules.example.yaml
importers/: commbank.py
scripts/: archive_files.py  check_ledger.py  ingest.py  merge_ledger.py  review.py  verify_env.py
tests/: test_account_sync.py  test_importers.py  test_ingest.py  test_integration_env.py  test_workflow.py
